Handle filters with android design not iPhone contacts us padding about us padding

--- a/SECB/app/src/main/res/layout-ar/contact_us.xml
+++ b/SECB/app/src/main/res/layout-ar/contact_us.xml
@@ -20,7 +20,7 @@
             android:id="@+id/txtv_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawablePadding="@dimen/contact_us_text_drwable_padding"
+            android:drawablePadding="12dp"
             android:drawableRight="@drawable/event_card_place_icon"
             android:gravity="right"
             android:text="@string/secb_location_address"
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/contact_us_text_drwable_padding"
-            android:drawablePadding="@dimen/contact_us_text_drwable_padding"
+            android:drawablePadding="6dp"
             android:drawableRight="@drawable/email_icon"
             android:gravity="right"
             android:text="@string/secb_email_address"
@@ -51,7 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:drawablePadding="@dimen/contact_us_text_drwable_padding"
+                android:drawablePadding="12dp"
                 android:drawableRight="@drawable/fax_icon"
                 android:gravity="right"
                 android:text="@string/secb_fax_number"
