--- a/SECB/app/src/main/res/layout/locations_filter_screen.xml
+++ b/SECB/app/src/main/res/layout/locations_filter_screen.xml
@@ -1,41 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/transparent"
-              android:orientation="horizontal"
-              android:weightSum="3">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/transparent"
+    android:orientation="horizontal"
+    android:weightSum="3">
 
     <LinearLayout
         android:id="@+id/layout_dark_layer"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:background="#aa000000"
         android:clickable="true"
-        android:background="#aa000000"
-        android:visibility="invisible"
-        android:orientation="vertical"></LinearLayout>
-
-    <View
-        android:id="@+id/shadow"
-        android:layout_width="2.3dp"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/filter_container"
-        android:visibility="visible"
-        android:background="#aa000000"
-        android:clickable="true"></View>
+        android:orientation="vertical"
+        android:visibility="invisible" />
 
     <LinearLayout
         android:id="@+id/filter_container"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/filter_bg"
         android:clickable="true"
         android:orientation="vertical"
         android:padding="@dimen/news_filter_padding">
 
 
+        <!-- Location & City -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -45,72 +35,52 @@
             android:paddingLeft="@dimen/news_filter_padding"
             android:paddingRight="@dimen/news_filter_padding">
 
-            <TableRow
+            <!--location name-->
+            <TextView
+                android:id="@+id/txtv_location_filter_name_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="@string/filter_location_name"
+                android:textColor="@color/secb_dark_text"
+                android:textSize="@dimen/news_filter_text_size" />
+
+            <!--from value-->
+            <EditText
+                android:id="@+id/txtv_location_filter_name_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:cursorVisible="true"
+                android:hint="@string/hint_name"
+                android:maxLines="1"
+                android:text=""
+                android:textColor="@color/secb_grey_text"
+                android:textSize="@dimen/news_filter_text_size"
+                android:layout_marginBottom="@dimen/news_filter_padding" />
+
+            <!--Location name-->
+            <TextView
+                android:id="@+id/txtv_location_filter_city_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="@string/filter_city"
+                android:textColor="@color/secb_dark_text"
+                android:textSize="@dimen/news_filter_text_size" />
+
+            <!--city value-->
+            <Spinner
+                android:id="@+id/spn_city_filter_city_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:orientation="horizontal">
-                <!--location name-->
-                <TextView
-                    android:id="@+id/txtv_location_filter_name_title"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="@string/filter_location_name"
-                    android:textColor="@color/secb_dark_text"
-                    android:textSize="@dimen/news_filter_text_size"/>
-
-                <!--from value-->
-                <EditText
-                    android:id="@+id/txtv_location_filter_name_value"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:hint="@string/hint_name"
-                    android:maxLines="1"
-                    android:text=""
-                    android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/news_filter_text_size"/>
-            </TableRow>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/light_grey"/>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:orientation="horizontal">
-                <!--Location name-->
-                <TextView
-                    android:id="@+id/txtv_location_filter_city_title"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-
-                    android:gravity="center_vertical"
-                    android:text="@string/filter_city"
-                    android:textColor="@color/secb_dark_text"
-                    android:textSize="@dimen/news_filter_text_size"/>
-
-                <!--city value-->
-                <Spinner
-                    android:id="@+id/spn_city_filter_city_value"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:hint="@string/hint_city"
-                    android:maxLines="1"
-                    android:background="@color/white"
-                    android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/news_filter_text_size" />
-            </TableRow>
-
-
+                android:gravity="center_vertical"
+                android:hint="@string/hint_city"
+                android:maxLines="1"
+                android:textColor="@color/secb_grey_text"
+                android:textSize="@dimen/news_filter_text_size" />
         </LinearLayout>
 
         <!--types title-->
@@ -123,7 +93,7 @@
             android:text="@string/filter_location_type"
             android:textColor="@color/secb_light_text"
             android:textSize="@dimen/news_filter_btn_text_size"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <!--types input-->
         <LinearLayout
@@ -138,17 +108,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@string/loading"
                 android:textColor="@color/secb_dark_text"
                 android:textSize="@dimen/gallery_item_text_size"
-                android:visibility="visible"
-                android:gravity="center"
-                android:text="@string/loading"/>
+                android:visibility="visible" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/locationTypesRecyclerView"
-                android:visibility="gone"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:visibility="gone">
 
             </android.support.v7.widget.RecyclerView>
 
@@ -162,8 +132,7 @@
                 android:text="@string/news_filter_all_types"
                 android:textColor="@color/secb_grey_text"
                 android:textSize="@dimen/news_filter_text_size"
-                android:visibility="gone"
-                />
+                android:visibility="gone" />
 
             <CheckBox
                 android:id="@+id/chkbox_type2"
@@ -175,7 +144,7 @@
                 android:text="@string/news_filter_economic_type"
                 android:textColor="@color/secb_grey_text"
                 android:textSize="@dimen/news_filter_text_size"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <CheckBox
                 android:id="@+id/chkbox_type3"
@@ -187,7 +156,7 @@
                 android:text="@string/news_filter_political_type"
                 android:textColor="@color/secb_grey_text"
                 android:textSize="@dimen/news_filter_text_size"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <CheckBox
                 android:id="@+id/chkbox_type4"
@@ -199,7 +168,7 @@
                 android:text="@string/news_filter_public_type"
                 android:textColor="@color/secb_grey_text"
                 android:textSize="@dimen/news_filter_text_size"
-                android:visibility="gone"/>
+                android:visibility="gone" />
         </LinearLayout>
         <!--total capacity title-->
         <TextView
@@ -211,8 +180,9 @@
             android:text="@string/filter_total_capacity"
             android:textColor="@color/secb_light_text"
             android:textSize="@dimen/news_filter_btn_text_size"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
+        <!-- Total Capacity -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -221,72 +191,54 @@
             android:paddingLeft="@dimen/news_filter_padding"
             android:paddingRight="@dimen/news_filter_padding">
 
-            <TableRow
+            <!--location name-->
+            <TextView
+                android:id="@+id/txtv_location_filter_capacity_from_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="@string/filter_time_from"
+                android:textColor="@color/secb_dark_text"
+                android:textSize="@dimen/news_filter_text_size" />
+
+            <!--from value-->
+            <EditText
+                android:id="@+id/txtv_location_filter_capacity_from_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:orientation="horizontal">
-                <!--location name-->
-                <TextView
-                    android:id="@+id/txtv_location_filter_capacity_from_title"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="@string/filter_time_from"
-                    android:textColor="@color/secb_dark_text"
-                    android:textSize="@dimen/news_filter_text_size"/>
+                android:cursorVisible="true"
+                android:hint="@string/filter_time_from"
+                android:inputType="number"
+                android:maxLines="1"
+                android:text=""
+                android:textColor="@color/secb_grey_text"
+                android:textSize="@dimen/news_filter_text_size"
+                android:layout_marginBottom="@dimen/news_filter_padding"/>
 
-                <!--from value-->
-                <EditText
-                    android:id="@+id/txtv_location_filter_capacity_from_value"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:hint="@string/filter_time_from"
-                    android:maxLines="1"
-                    android:text=""
-                    android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/news_filter_text_size"
-                    android:inputType="number"/>
-            </TableRow>
-
-            <View
+            <!--to-->
+            <TextView
+                android:id="@+id/txtv_location_filter_capacity_to_title"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/light_grey"/>
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="@string/filter_time_to"
+                android:textColor="@color/secb_dark_text"
+                android:textSize="@dimen/news_filter_text_size" />
 
-            <TableRow
+            <!--to value-->
+            <EditText
+                android:id="@+id/txtv_location_filter_capacity_to_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:orientation="horizontal">
-                <!--to-->
-                <TextView
-                    android:id="@+id/txtv_location_filter_capacity_to_title"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-
-                    android:gravity="center_vertical"
-                    android:text="@string/filter_time_to"
-                    android:textColor="@color/secb_dark_text"
-                    android:textSize="@dimen/news_filter_text_size"/>
-
-                <!--to value-->
-                <EditText
-                    android:id="@+id/txtv_location_filter_capacity_to_value"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:hint="@string/filter_time_to"
-                    android:maxLines="1"
-                    android:text=""
-                    android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/news_filter_text_size"
-                    android:inputType="number"/>
-            </TableRow>
-
+                android:cursorVisible="true"
+                android:hint="@string/filter_time_to"
+                android:inputType="number"
+                android:maxLines="1"
+                android:text=""
+                android:textColor="@color/secb_grey_text"
+                android:textSize="@dimen/news_filter_text_size" />
 
         </LinearLayout>
 
@@ -301,7 +253,7 @@
             android:text="@string/filters_apply_filter"
             android:textAllCaps="false"
             android:textColor="@color/secb_light_text"
-            android:textSize="@dimen/news_filter_btn_text_size"/>
+            android:textSize="@dimen/news_filter_btn_text_size" />
 
 
         <!--Clear Filters button-->
@@ -311,19 +263,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/filters_clear_filter"
-            android:textAllCaps="false"
             android:background="@null"
             android:gravity="center"
+            android:text="@string/filters_clear_filter"
+            android:textAllCaps="false"
             android:textColor="@color/secb_light_text"
-            android:textSize="@dimen/news_filter_btn_text_size"/>
+            android:textSize="@dimen/news_filter_btn_text_size" />
 
 
     </LinearLayout>
 
+    <View
+        android:id="@+id/shadow"
+        android:layout_width="match_parent"
+        android:layout_height="2.3dp"
+        android:layout_above="@+id/filter_container"
+        android:background="#aa000000"
+        android:clickable="true"
+        android:visibility="visible" />
 
-</LinearLayout>
-    <!--
+</RelativeLayout><!--
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
