--- a/SECB/app/src/main/res/layout-ar/location_personal_info.xml
+++ b/SECB/app/src/main/res/layout-ar/location_personal_info.xml
@@ -34,7 +34,8 @@
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/address_title"
             android:gravity="center_vertical"
-            android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
+            android:text="-"
+            android:paddingRight="5dp"
             android:textColor="@color/secb_grey_text"
             android:textSize="@dimen/organizer_p_info_h1_text_size" />
     </RelativeLayout>
@@ -69,7 +70,8 @@
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/phone_title"
             android:gravity="center_vertical"
-            android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
+            android:paddingRight="5dp"
+            android:text="-"
             android:textColor="@color/secb_grey_text"
             android:textSize="@dimen/organizer_p_info_h1_text_size" />
     </RelativeLayout>
@@ -104,7 +106,8 @@
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/email_title"
             android:gravity="center_vertical"
-            android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
+            android:paddingRight="5dp"
+            android:text="-"
             android:textColor="@color/secb_grey_text"
             android:textSize="@dimen/organizer_p_info_h1_text_size" />
     </RelativeLayout>
