--- a/SECB/app/src/main/res/layout/contact_us.xml
+++ b/SECB/app/src/main/res/layout/contact_us.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/event_card_place_icon"
-            android:drawablePadding="@dimen/contact_us_text_drwable_padding"
+            android:drawablePadding="14dp"
             android:text="@string/secb_location_address"
             android:textColor="@color/secb_dark_text"
             android:textSize="@dimen/contact_us_text_us"/>
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/contact_us_text_drwable_padding"
             android:drawableLeft="@drawable/email_icon"
-            android:drawablePadding="@dimen/contact_us_text_drwable_padding"
+            android:drawablePadding="9dp"
             android:text="@string/secb_email_address"
             android:textColor="@color/secb_dark_text"
             android:textSize="@dimen/contact_us_text_us"/>
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:drawableLeft="@drawable/contactus_icon_3"
-                android:drawablePadding="@dimen/contact_us_text_drwable_padding"
+                android:drawablePadding="13dp"
                 android:text="@string/secb_phone_number"
                 android:textColor="@color/secb_dark_text"
                 android:textSize="@dimen/contact_us_text_us"/>
