--- a/SECB/app/src/main/res/layout/events_activity.xml
+++ b/SECB/app/src/main/res/layout/events_activity.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:background="@color/white"
+    >
 
     <FrameLayout
         android:id="@+id/events_list_container"
-        android:layout_width="500dp"
+        android:layout_width="match_parent"
         android:background="@color/light_grey"
         android:layout_height="match_parent">
     </FrameLayout>
