--- a/SECB/app/src/main/res/layout/news_item_card.xml
+++ b/SECB/app/src/main/res/layout/news_item_card.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
     android:layout_marginTop="@dimen/event_card_margin"-->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:id="@+id/layout_item_root"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/news_item_card_height"
     android:layout_marginBottom="@dimen/event_card_margin"
-    android:background="@color/white"
     android:orientation="horizontal"
+    android:background="@drawable/recycler_view_item"
     android:weightSum="4.5">
 
     <ImageView
